# nuko

./: .gitignore  .taurignore  README.md  TODO.md  components.json  package-lock.json  package.json  svelte.config.js
.github/: FUNDING.yml
.github/workflows/: build.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  download.rs  filesystem.rs  instance.rs  lib.rs  main.rs  models.rs  playit.rs
src/routes/: +layout.svelte  +page.svelte  test-chart.svelte
src/routes/[id]/: +page.svelte
src/routes/first-startup/: +page.svelte
src/routes/new-instance/: +page.svelte
src/routes/onboarding/: +page.svelte
