[package]
name = "nuko"
version = "0.1.0"
description = "A Minecraft server manager inspired by Prism Launcher based on Rust and Tauri."
authors = ["Hongmeng Zhai <zhaihongmeng@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nuko_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
toml = "1.0.3"
chrono = { version = "0.4.43", features = ["serde"] }
tauri-plugin-dialog = "2.6.0"
sysinfo = "0.38.2"
